add contents list in index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<html>tei-lab.github.io</html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TEI Lab</title>
+</head>
+<body>
+<ul>
+<li><a href="elements_list/">P5: TEIガイドライン要素・属性一覧</a></li>
+<li><a href="elements_tree/">TEI 要素ツリー</a></li>
+<li><a href="elements_tree_lite/">TEI Lite 要素ツリー</a></li>
+</ul>
+</body>
+</html>
