--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <ul>
-<li><a href="elements_list/">P5: TEIガイドライン要素・属性一覧</a></li>
-<li><a href="elements_tree/">TEI 要素ツリー</a></li>
-<li><a href="elements_tree_lite/">TEI Lite 要素ツリー</a></li>
+<li><a href="element_list/">P5: TEIガイドライン要素・属性一覧</a></li>
+<li><a href="element_tree/">TEI 要素ツリー</a></li>
+<li><a href="element_tree_lite/">TEI Lite 要素ツリー</a></li>
 <li><a href="element_explorer/">TEI 要素ツリー（縦展開）</a></li>
 </ul>
 </body>
