--- a/element_explorer_lite/index.html
+++ b/element_explorer_lite/index.html
@@ -1,72 +1,20 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+<html>
 <head>
 <meta charset="utf-8">
-<title>TEI Lite 要素ツリー</title>
+<title>TEI 要素ツリー</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
 </head>
-<body>
+<frameset cols="300,*">
 <div id="tree-container"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
-<script>
-$(function () {
-    $.getJSON("elements.json", function(elements) {
-        $('#tree-container').jstree({
-            "core" : {
-                "check_callback": true,
-                "expand_selected_onload" : false,
-                "multiple": false,
-                "themes": {
-                    "icons": false,
-                    "variant": "large",
-                    "responsive": true
-                },
-                "data" : {
-                    "url" : function (node) {
-                        return 'root.json';
-                    }
-                }
-            }
-        });
-        var no_link = ["ANY", "Character data only", "Empty element", "character data"];
-        var jstree = $('#tree-container').jstree(true);
-        $('#tree-container').on("select_node.jstree", function (e, data) {
-            if (no_link.indexOf(data.node.text) >= 0) {
-                return null;
-            }
-            var link = data.instance.get_node(data.node, true).children('a').attr('href');
-            window.open(link, '_blank');
-        });
-        $('#tree-container').on("before_open.jstree", function (e, data) {
-            data.node.children.forEach(function(id) {
-                var child = jstree.get_node(id, null);
-                if (child.children.length == 0 && elements[child.text].children.length > 0) {
-                    elements[child.text].children.forEach(function(grandchild) {
-                        if (no_link.indexOf(grandchild.name) >= 0) {
-                            jstree.create_node(
-                                child, 
-                                {
-                                    "text": grandchild.name
-                                });
-                        }
-                        else {
-                            jstree.create_node(
-                                child, 
-                                {
-                                    "text": grandchild.name,
-                                    "a_attr": {
-                                        "href": "https://www.tei-c.org/release/doc/tei-p5-doc/ja/html/ref-" + grandchild.name + ".html",
-                                        "target": "_blank",
-                                        "title": elements[grandchild.name].desc
-                                    }
-                                });
-                        }
-                    });
-                }
-            });
-        });
-    });
-});
-</script>
+<frame name="explorer" title="要素ツリー" src="explorer.html">
+<frame name="reference" title="要素リファレンス" src="https://muranamihdk.github.io/tei-guidelines-ja/ja/html/REF-ELEMENTS.html">
+<noframes>
+<body>
+<a href="no-frame.html">フレーム未対応版ページ</a>
 </body>
+</noframes>
+</frameset>
 </html>
