--- a/element_explorer_lite/index.html
+++ b/element_explorer_lite/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TEI 要素ツリー</title>
+<title>TEI Lite 要素ツリー</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
 </head>
 <frameset cols="300,*">
