--- a/element_explorer/index.html
+++ b/element_explorer/index.html
@@ -10,7 +10,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
 <frame name="explorer" title="要素ツリー" src="explorer.html">
-<frame name="reference" title="要素リファレンス" src="https://muranamihdk.github.io/tei-guidelines-ja/ja/html/REF-ELEMENTS.html">
+<frame name="reference" title="要素リファレンス" src="https://tei-lab.github.io/tei-guidelines-ja/ja/html/REF-ELEMENTS.html">
 <noframes>
 <body>
 <a href="no-frame.html">フレーム未対応版ページ</a>
