--- a/element_explorer_lite/explorer.html
+++ b/element_explorer_lite/explorer.html
@@ -55,7 +55,7 @@ $(function () {
                                 {
                                     "text": grandchild.name,
                                     "a_attr": {
-                                        "href": "https://muranamihdk.github.io/tei-guidelines-ja/ja/html/ref-" + grandchild.name + ".html",
+                                        "href": "https://tei-lab.github.io/tei-guidelines-ja/ja/html/ref-" + grandchild.name + ".html",
                                         "target": "reference",
                                         "title": elements[grandchild.name].desc
                                     }
