add element_list_lite/ and modified index.html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TEI Lab</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TEI Lab</title>
 </head>
 <body>
-<ul>
-<li><a href="element_list/">TEI ガイドライン要素・属性一覧</a></li>
-<li>TEI 要素ツリー</a></li>
-<ul>
-<li><a href="element_explorer/">縦展開・エクスプローラ型</a></li>
-<li><a href="element_tree/">横展開・ネットワーク型</a></li>
-</ul>
-<li>TEI Lite 要素ツリー</li>
-<ul>
-<li><a href="element_explorer_lite/">縦展開・エクスプローラ型</a></li>
-<li><a href="element_tree_lite/">横展開・ネットワーク型</a></li>
-</ul>
-</ul>
+    <h1>TEI 実験室</h1>
+    <p>（TEI を使った／TEI をめぐる）個人的な試みを集めたページです。TEI そのものも TEI (XML) で書かれているので、それを生かしたツール類を使っている（私にとってはプログラミング的なチャレンジである）ということが実験の実験たる所以です。</p>
+
+    <h2>1. TEI そのものをめぐる実験</h2>
+    <p>TEI は規模が大きいので全体が見えにく、入門のハードルが高いです。このハードルを少しでも軽減するための素材を作成できないかという観点から取り組んだのがこの実験になります。</p>
+
+    <h3>1-1. TEI 要素を一覧する</h2>
+    <p>TEI ガイドラインのリファレンスは一覧することができません。要素を一覧するページを作ることによって TEI の全体の把握の助けにならないかということで作ったのがこれです。</p>
+    <ul>
+        <li><a href="element_list/">TEI 要素・属性一覧</a></li>
+        <li><a href="element_list_lite/">TEI Lite 要素・属性一覧</a></li>
+    </ul>
+
+    <h3>1-2. TEI 要素の包含関係を視覚化する</h2>
+    <p>TEI は XML ですので要素同士には包含関係と上下関係があり、木構造をとります。この関係を図示する試みです。</p>
+    <ol>
+        <li>エクスプローラ型視覚化（縦展開）</li>
+            <ul>
+                <li><a href="element_explorer/">TEI</a></li>
+                <li><a href="element_explorer_lite/">TEI Lite</a></li>
+            </ul>
+        <li>ネットワーク型視覚化（横展開）</li>
+            <ul>
+                <li><a href="element_tree/">TEI</a></li>
+                <li><a href="element_tree_lite/">TEI Lite</a></li>
+            </ul>
+    </ol>
+
+    <hr />
+
+    <p>最終更新日：2019-10-26</p>
 </body>
 </html>
