--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
     <h1>TEI 実験室</h1>
-    <p>（TEI を使った／TEI をめぐる）個人的な試みを集めたページです。TEI そのものも TEI (XML) で書かれているので、それを生かしたツール類を使っている（私にとってはプログラミング的なチャレンジである）ということが実験の実験たる所以です。</p>
+    <p>TEI をめぐる個人的な試みを集めたページです。</p>
 
     <h2>1. TEI そのものをめぐる実験</h2>
-    <p>TEI は規模が大きいので全体が見えにく、入門のハードルが高いです。このハードルを少しでも軽減するための素材を作成できないかという観点から取り組んだのがこの実験になります。</p>
+    <p>主に TEI の入門や理解の助けとなる素材を作成するという観点から取り組んだ実験です。</p>
 
     <h3>1-1. TEI 要素を一覧する</h2>
-    <p>TEI ガイドラインのリファレンスは一覧することができません。要素を一覧するページを作ることによって TEI の全体の把握の助けにならないかということで作ったのがこれです。</p>
+    <p>TEI ガイドラインのWEBリファレンスは、要素や属性ごとに別のページになっていて一覧することができません。全体が見えにくいことは、入門や理解のハードルを上げていると思います。そこで要素を一覧するページを作ってみました。</p>
     <ul>
         <li><a href="element_list/">TEI 要素・属性一覧</a></li>
         <li><a href="element_list_lite/">TEI Lite 要素・属性一覧</a></li>
@@ -35,6 +35,6 @@
 
     <hr />
 
-    <p>最終更新日：2019-10-26</p>
+    <p>最終更新日：2019-10-28</p>
 </body>
 </html>
