modified elememt list lite html

--- a/element_list_lite/index.html
+++ b/element_list_lite/index.html
@@ -22,15 +22,15 @@
    </head>
    <body>
       <h1>TEI Lite 要素・属性一覧</h1>
-      <p><small>Generated from ODD files of the Guidelines version 3.7.0a updated on 18th October 2019 as revision 0000125, and a TEI Lite RELAX NG schema file.</small></p>
       <p>このページはTEIガイドラインで定義されている 576 個の要素と 265 個の属性を，ガイドラインに沿ってモジュール別に列挙したものである．</p>
-      <p>このページでは要素は TEI Lite に採用されたもののみを列挙している。</p>
+      <p>ここでは要素は TEI Lite に採用されたもののみを列挙している。</p>
       <ul class="list-inline">
          <li class="list-inline-item"><a href="#module_list">モジュール一覧</a></li>
          <li class="list-inline-item"><a href="#elements_list">要素一覧</a></li>
          <li class="list-inline-item"><a href="#attribute-classes-list">属性クラス一覧</a></li>
          <li class="list-inline-item"><a href="#alphabetical-index">アルファベット順要素インデックス</a></li>
       </ul>
+      <hr>
       <h2 id="module_list">モジュール一覧</h2>
       <p>TEIガイドラインのすべての要素は，その用途や使用分野に応じ，以下のモジュールのいずれかに分類されている．</p>
       <table>
@@ -145,6 +145,7 @@
             <td><a href="https://www.tei-c.org/release/doc/tei-p5-doc/ja/html/TD.html" target="_blank">22. Documentation Elements</a></td>
          </tr>
       </table>
+      <hr>
       <h2 id="elements_list">要素一覧</h2>
       <p> * 印はその要素が <a href="https://tei-c.org/guidelines/customization/Lite/">TEI Lite</a> サブセット 140 個中に含まれる基本的な要素であることを示す．</p>
       <table>
@@ -1285,6 +1286,7 @@
             <td><a href="https://www.tei-c.org/release/doc/tei-p5-doc/ja/html/TD.html#TD" target="_blank">§ 22 Documentation Elements</a><br><a href="https://www.tei-c.org/release/doc/tei-p5-doc/ja/html/TD.html#TDATT" target="_blank">§ 22.5.3 Attribute List Specification</a><br></td>
          </tr>
       </table>
+      <hr>
       <h2 id="attribute-classes-list">属性クラス一覧</h2>
       <p>属性クラスは複数の属性をグループ化する．ある要素で使用可能な属性は属性クラスでも指定することができる．</p>
       <table>
@@ -1703,6 +1705,7 @@
             <td>@<a href="https://www.tei-c.org/release/doc/tei-p5-doc/ja/html/ref-att.written.html#tei_att.hand" target="_blank">hand</a> - 当該調整を行った主体の筆致を特定する．<br></td>
          </tr>
       </table>
+      <hr>
       <h2 id="alphabetical-index">アルファベット順要素インデックス</h2>
       <p>
          <table>
@@ -1808,5 +1811,7 @@
             </tr>
          </table>
       </p>
+      <hr>
+      <p><small>Generated from ODD files of the Guidelines version 3.7.0a updated on 18th October 2019 as revision 0000125, and a TEI Lite RELAX NG schema file.</small></p>
    </body>
 </html>
