--- a/element_list/index.html
+++ b/element_list/index.html
@@ -22,7 +22,7 @@
    </head>
    <body>
       <h1>P5: TEIガイドラインで定義されている要素と属性の一覧</h1>
-      <p>このページはTEIガイドラインで定義されている 576 個の要素と 265 個の属性を，ガイドラインに沿ってモジュール別に列挙したものである．</p>
+      <p>このページはTEIガイドラインで定義されている 576 個の要素と 265 個の属性を一覧できるようにしたものである．要素はガイドラインに沿ってモジュール別に列挙し，属性は属性クラス別に列挙している．末尾に属性名による索引を付した．このページはガイドラインのODDファイルからXSLTスタイルシートにより機械的に生成されたものである．</p>
       <ul class="list-inline">
          <li class="list-inline-item"><a href="#module_list">モジュール一覧</a></li>
          <li class="list-inline-item"><a href="#elements_list">要素一覧</a></li>
@@ -4872,7 +4872,7 @@
       </table>
       <hr>
       <h2 id="attribute-classes-list">属性クラス一覧</h2>
-      <p>属性クラスは複数の属性をグループ化する．ある要素で使用可能な属性は属性クラスでも指定することができる．</p>
+      <p>属性クラスは複数の属性をグループ化する．これによりある要素で使用可能な複数の属性を一括して指定することができる．</p>
       <table>
          <tr>
             <th>属性クラス名</th>
