modified elememt list html

--- a/element_list/index.html
+++ b/element_list/index.html
@@ -22,7 +22,8 @@
    </head>
    <body>
       <h1>P5: TEIガイドラインで定義されている要素と属性の一覧</h1>
-      <p>このページはTEIガイドラインで定義されている 576 個の要素と 265 個の属性を一覧できるようにしたものである．要素はガイドラインに沿ってモジュール別に列挙し，属性は属性クラス別に列挙している．末尾に属性名による索引を付した．このページはガイドラインのODDファイルからXSLTスタイルシートにより機械的に生成されたものである．</p>
+      <p>このページは， TEIガイドラインで定義されている 576 個の要素と 265 個の属性を，通覧できるようにしたものである．要素はガイドラインに沿ってモジュール順に列挙し，属性は属性クラス別に列挙している．末尾に属性名による索引を付した．このページはガイドラインのリファレンスのODDソースファイルから，
+         XSLTスタイルシートにより機械的に生成されたものである．</p>
       <ul class="list-inline">
          <li class="list-inline-item"><a href="#module_list">モジュール一覧</a></li>
          <li class="list-inline-item"><a href="#elements_list">要素一覧</a></li>
