modified elememt list html

--- a/element_list/index.html
+++ b/element_list/index.html
@@ -146,7 +146,7 @@
       </table>
       <hr>
       <h2 id="elements_list">要素一覧</h2>
-      <p> * 印はその要素が <a href="https://tei-c.org/guidelines/customization/Lite/">TEI Lite</a> サブセット 140 個中に含まれる基本的な要素であることを示す．</p>
+      <p> * 印はその要素が <a href="https://tei-c.org/guidelines/customization/Lite/">TEI Lite</a> サブセット 140 個中に含まれる基本的な要素であることを示す。</p>
       <table>
          <tr>
             <th colspan="2" class="td-border-right-none">要素名</th>
@@ -4872,7 +4872,7 @@
       </table>
       <hr>
       <h2 id="attribute-classes-list">属性クラス一覧</h2>
-      <p>属性クラスは複数の属性をグループ化する．これによりある要素で使用可能な複数の属性を一括して指定することができる．</p>
+      <p>属性クラスは複数の属性をグループ化する。これによりある要素で使用可能な複数の属性を，一括して指定することができる。</p>
       <table>
          <tr>
             <th>属性クラス名</th>
@@ -5396,6 +5396,6 @@
          </table>
       </p>
       <hr>
-      <p><small>Generated from ODD files of the Guidelines version 3.7.0a updated on 18th October 2019 as revision 0000125, and a TEI Lite RELAX NG schema file.</small></p>
+      <p><small>Generated from ODD files of the Guideline version 3.7.0a updated on 18th October 2019 as revision 0000125 and a TEI Lite RELAX NG schema file.</small></p>
    </body>
 </html>
