modified: index.html

--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
     <title>TEI Lab</title>
 </head>
 <body>
-    <h1>TEI 実験室</h1>
-    <p>TEI をめぐる個人的な試みを集めたページです。</p>
+    <h1>TEI ラボ</h1>
+    <p>TEI をめぐる個人的な試み</p>
 
-    <h2>1. TEI そのものをめぐる実験</h2>
-    <p>主に TEI の入門や理解の助けとなる素材を作成するという観点から取り組んだ実験です。</p>
+    <h2>TEI ODDファイルを使った試み</h2>
 
-    <h3>1-1. TEI 要素を一覧する</h2>
-    <p>TEI ガイドラインのWEBリファレンスは、要素や属性ごとに別のページになっていて一覧することができません。全体が見えにくいことは、入門や理解のハードルを上げていると思います。そこで要素を一覧するページを作ってみました。</p>
+    <h3>TEI 要素・属性を一覧する</h2>
+    <p>TEI ガイドラインで定義されている要素や属性をとりあえず通覧したい。そんな時に使うことのできる一覧ページを作る試み。</p>
     <ul>
-        <li><a href="element_list/">TEI 要素・属性一覧</a></li>
-        <li><a href="element_list_lite/">TEI Lite 要素・属性一覧</a></li>
+        <li><a href="element_list/">P5: TEIガイドラインで定義されている要素と属性の一覧</a></li>
+        <li><a href="element_list_lite/">P5: TEIガイドラインで定義されている要素と属性の一覧（要素は TEI Lite 採用分のみ）</a></li>
     </ul>
 
-    <h3>1-2. TEI 要素の包含関係を視覚化する</h2>
-    <p>TEI は XML ですので要素同士には包含関係と上下関係があり、木構造をとります。この関係を図示する試みです。</p>
+    <h3>TEI 要素の包含関係を視覚化する</h2>
+    <p>TEI は XML なので要素同士には包含関係と上下関係があり、木構造をとる。この関係を図示する試み。</p>
     <ol>
         <li>エクスプローラ型視覚化（縦展開）</li>
             <ul>
@@ -35,6 +34,6 @@
 
     <hr />
 
-    <p>最終更新日：2019-10-28</p>
+    <p>最終更新日：2019-11-08</p>
 </body>
 </html>
