--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h2>TEI ODDファイルを使った試み</h2>
 
     <h3>TEI 要素・属性を一覧する</h2>
-    <p>TEI ガイドラインで定義されている要素や属性をとりあえず通覧したい。そんな時に使うことのできる一覧ページを作る試み。</p>
+    <p>TEI ガイドラインで定義されている要素や属性をとりあえず通覧したい。そんな時に使うことのできる一覧ページを作る試み</p>
     <ul>
         <li><a href="element_list/">P5: TEIガイドラインで定義されている要素と属性の一覧</a></li>
         <li><a href="element_list_lite/">P5: TEIガイドラインで定義されている要素と属性の一覧（要素は TEI Lite 採用分のみ）</a></li>
     </ul>
 
     <h3>TEI 要素の包含関係を視覚化する</h2>
-    <p>TEI は XML なので要素同士には包含関係と上下関係があり、木構造をとる。この関係を図示する試み。</p>
-    <ol>
+    <p>TEI は XML なので要素同士には包含関係と上下関係があり、木構造をとる。この関係を図示する試み</p>
+    <ul>
         <li>エクスプローラ型視覚化（縦展開）</li>
             <ul>
                 <li><a href="element_explorer/">TEI</a></li>
@@ -30,7 +30,7 @@
                 <li><a href="element_tree/">TEI</a></li>
                 <li><a href="element_tree_lite/">TEI Lite</a></li>
             </ul>
-    </ol>
+    </ul>
 
     <hr />
 
