modified: index.html

--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
 </head>
 <body>
     <h1>TEI ラボ</h1>
-    <p>TEI をめぐる個人的な試み</p>
 
-    <h2>TEI ODDファイルを使った試み</h2>
-
-    <h3>TEI 要素・属性を一覧する</h2>
-    <p>TEI ガイドラインで定義されている要素や属性をとりあえず通覧したい。そんな時に使うことのできる一覧ページを作る試み</p>
+    <h2>TEI 要素・属性を一覧する</h2>
+    <p>TEIガイドラインで定義されている要素や属性をとりあえず通覧したい。そんな時に使うことのできる一覧ページを作ってみる。TEIガイドラインのレファレンスのODDソースファイルからXSLTスタイルシートを使い情報を抽出し1ページのHTMLファイルに変換する。</p>
     <ul>
         <li><a href="element_list/">P5: TEIガイドラインで定義されている要素と属性の一覧</a></li>
         <li><a href="element_list_lite/">P5: TEIガイドラインで定義されている要素と属性の一覧（要素は TEI Lite 採用分のみ）</a></li>
     </ul>
 
-    <h3>TEI 要素の包含関係を視覚化する</h2>
-    <p>TEI は XML なので要素同士には包含関係と上下関係があり、木構造をとる。この関係を図示する試み</p>
+    <h2>TEI 要素の包含関係を視覚化する</h2>
+    <p>TEIはXMLなので要素同士には包含関係と上下関係があり、木構造をとる。この関係を図示してみる。TEIガイドラインのレファレンスのODDソースファイルをXSLTスタイルシートを使い情報を抽出した上でJSONファイルに変換。このJSONファイルをJavaScriptから読み込み、インタラクティブなツリー構造へと変換して表示する。</p>
     <ul>
         <li>エクスプローラ型視覚化（縦展開）</li>
             <ul>
