--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <title>TEI Lab</title>
 </head>
 <body>
-    <h1>TEI ラボ</h1>
+    <h1>TEI Lab</h1>
 
-    <h2>TEI 要素・属性を一覧する</h2>
-    <p>TEIガイドラインで定義されている要素や属性をとりあえず通覧したい。そんな時に使うことのできる一覧ページを作ってみた。TEIガイドラインのレファレンスのODDソースファイルからXSLTスタイルシートを使い情報を抽出し、1ページのHTMLファイルに変換した。</p>
-    <ul>
-        <li><a href="element_list/">P5: TEIガイドラインで定義されている要素と属性の一覧</a></li>
-        <li><a href="element_list_lite/">P5: TEIガイドラインで定義されている要素と属性の一覧（要素は TEI Lite 採用分のみにしたもの）</a></li>
-    </ul>
+    <h2>TEI の要素・属性などを通覧する</h2>
+    <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ってみた。TEIガイドラインのレファレンスのODDソースファイルから、XSLTスタイルシートを使い情報を抽出し、1ページのHTMLファイルに変換している。</p>
+    <ol>
+        <li><a href="element_list/">TEIガイドラインで定義されているモジュール・要素・属性クラスの一覧</a></li>
+    </ol>
 
     <h2>TEI 要素の包含関係を視覚化する</h2>
-    <p>TEIはXMLなので要素同士には包含関係と上下関係があり、木構造をとる。この関係を図示してみた。TEIガイドラインのレファレンスのODDソースファイルからXSLTスタイルシートを使い情報を抽出した上でJSONファイルに変換。このJSONファイルをJavaScriptから読み込み、インタラクティブなツリー構造へと変換して表示している。</p>
-    <ul>
+    <p>TEIはXMLなので要素同士には包含関係と上下関係があり、木構造をとる。この関係を図示してみた。TEIガイドラインのレファレンスのODDソースファイルから、XSLTスタイルシートを使い情報を抽出した上で、JSONファイルに変換、このJSONファイルをJavaScriptから読み込み、インタラクティブなツリー構造へと変換して表示している。</p>
+    <ol>
         <li>エクスプローラ型視覚化（縦展開）</li>
             <ul>
                 <li><a href="element_explorer/">TEI</a></li>
@@ -27,7 +26,7 @@
                 <li><a href="element_tree/">TEI</a></li>
                 <li><a href="element_tree_lite/">TEI Lite</a></li>
             </ul>
-    </ul>
+    </ol>
 
     <hr />
 
