--- a/element_list/index.html
+++ b/element_list/index.html
@@ -2,7 +2,7 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>P5: TEIガイドライン要素・属性一覧</title>
+      <title>P5: TEIガイドライン モジュール・要素・属性クラス一覧</title>
       <style type="text/css">
     table {
         border-collapse: collapse;
@@ -21,7 +21,7 @@
     </style>
    </head>
    <body>
-      <h1>P5: TEIガイドラインで定義されている要素と属性の一覧</h1>
+      <h1>P5: TEIガイドラインで定義されているモジュールと要素と属性クラスの一覧</h1>
       <p>このページは，TEIガイドラインで定義されている576個の要素と265個の属性を通覧できるようにしたものである。要素はガイドラインに沿ってモジュール順に列挙した。属性は属性クラス別に列挙した。末尾に属性名による索引を付している。このページはガイドラインのリファレンスのODDソースファイルからXSLTスタイルシートにより機械的に生成されたものである。</p>
       <ul class="list-inline">
          <li class="list-inline-item"><a href="#module_list">モジュール一覧</a></li>
