modified elememt list html

--- a/element_list/index.html
+++ b/element_list/index.html
@@ -1,8 +1,8 @@
-<html xmlns:rng="http://relaxng.org/ns/structure/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
+<html xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:rng="http://relaxng.org/ns/structure/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>P5: TEIガイドライン モジュール・要素・属性クラス一覧</title>
+      <title>TEIガイドライン定義モジュール・要素・属性クラス一覧</title>
       <style type="text/css">
     table {
         border-collapse: collapse;
@@ -21,8 +21,8 @@
     </style>
    </head>
    <body>
-      <h1>P5: TEIガイドラインで定義されているモジュールと要素と属性クラスの一覧</h1>
-      <p>このページは，TEIガイドラインで定義されている576個の要素と265個の属性を通覧できるようにしたものである。要素はガイドラインに沿ってモジュール順に列挙した。属性は属性クラス別に列挙した。末尾に属性名による索引を付している。このページはガイドラインのリファレンスのODDソースファイルからXSLTスタイルシートにより機械的に生成されたものである。</p>
+      <h1>TEIガイドライン定義モジュール・要素・属性クラス一覧</h1>
+      <p>このページは，TEIガイドラインで定義されている576個の要素と265個の属性を通覧できるようにしたものである。要素はガイドラインに沿ってモジュール順に列挙した。属性は属性クラス別に列挙した。末尾に属性名による索引を付している。このページはガイドラインの付録リファレンスのODDファイルからXSLTスタイルシートにより機械的に生成されたものである。</p>
       <ul class="list-inline">
          <li class="list-inline-item"><a href="#module_list">モジュール一覧</a></li>
          <li class="list-inline-item"><a href="#elements_list">要素一覧</a></li>
@@ -5396,6 +5396,6 @@
          </table>
       </p>
       <hr>
-      <p><small>Generated from ODD files of the Guideline version 3.7.0a updated on 18th October 2019 as revision 0000125 and a TEI Lite RELAX NG schema file.</small></p>
+      <p><small>Generated from the TEI Guidelines version 3.7.0a, revision 0000125, last updated on 18th October 2019. This page generated at 2019-11-30 00:58:52.</small></p>
    </body>
 </html>
