modified:index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>TEI Lab</h1>
 
     <h2>TEI の要素・属性などを通覧する</h2>
-    <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ってみた。TEIガイドラインのレファレンスのODDソースファイルから、XSLTスタイルシートを使い情報を抽出し、1ページのHTMLファイルに変換している。</p>
+    <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ってみた。TEIガイドラインの付録レファレンスのODDファイルから、XSLTスタイルシートを使い情報を抽出し、1ページのHTMLファイルに変換している。</p>
     <ol>
-        <li><a href="element_list/">TEIガイドラインで定義されているモジュール・要素・属性クラスの一覧</a></li>
+        <li><a href="element_list/">モジュール・要素・属性クラス一覧</a></li>
     </ol>
 
     <h2>TEI 要素の包含関係を視覚化する</h2>
@@ -30,6 +30,6 @@
 
     <hr />
 
-    <p>最終更新日：2019-11-28</p>
+    <p>最終更新日：2019-11-29</p>
 </body>
 </html>
