modified elememt list html

--- a/element_list/index.html
+++ b/element_list/index.html
@@ -1,4 +1,4 @@
-<html xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:rng="http://relaxng.org/ns/structure/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
+<html xmlns:rng="http://relaxng.org/ns/structure/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -5396,6 +5396,6 @@
          </table>
       </p>
       <hr>
-      <p><small>Generated from the TEI Guidelines version 3.7.0a, revision 0000125, last updated on 18th October 2019. This page generated at 2019-11-30 00:58:52.</small></p>
+      <p><small>Generated from the TEI Guidelines version 3.7.0a, revision 0000125, last updated on 18th October 2019. This page generated at 2019-12-01 10:30:05.</small></p>
    </body>
 </html>
