--- a/index.html
+++ b/index.html
@@ -6,22 +6,29 @@
 </head>
 <body>
     <h1>TEI Lab</h1>
+    <p>このページは、TEIガイドラインを学ぶ際にあったらいいなと思った教材を、自分で作ってみたものです。通常のTEIガイドラインだけでなく、その簡略版サブセットであるTEI Liteでも同じものを作っています。</p>
 
-    <h2>TEI の要素・属性などを通覧する</h2>
-    <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ってみた。TEIガイドラインの付録レファレンスのODDファイルから、XSLTスタイルシートを使い情報を抽出し、1ページのHTMLファイルに変換している。</p>
-    <ol>
-        <li><a href="element_list/">モジュール・要素・属性クラス一覧</a></li>
-    </ol>
+    <h2>TEI の要素・属性などの一覧</h2>
+    <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ったものです。</p>
+    <ul>
+        <li>モジュール・要素・属性一覧</li>
+            <ul>
+                <li><a href="element_list/">TEI</a></li>
+                <li><a href="element_list_lite/">TEI Lite</a></li>
+            </ul>
+    </ul>
 
     <h2>TEI 要素の包含関係を視覚化する</h2>
-    <p>TEIはXMLなので要素同士には包含関係と上下関係があり、木構造をとる。この関係を図示してみた。TEIガイドラインのレファレンスのODDソースファイルから、XSLTスタイルシートを使い情報を抽出した上で、JSONファイルに変換、このJSONファイルをJavaScriptから読み込み、インタラクティブなツリー構造へと変換して表示している。</p>
+    <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係をインタラクティブに開閉できるツリー構造として図示したものです。</p>
     <ol>
         <li>エクスプローラ型視覚化（縦展開）</li>
+            <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると右側のフレームにTEIガイドラインの当該要素のリファレンスページを表示します。「＞」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
             <ul>
                 <li><a href="element_explorer/">TEI</a></li>
                 <li><a href="element_explorer_lite/">TEI Lite</a></li>
             </ul>
         <li>ネットワーク型視覚化（横展開）</li>
+            <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると、新しいページを開いてTEIガイドラインの当該要素のリファレンスページを表示します。「◯」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
             <ul>
                 <li><a href="element_tree/">TEI</a></li>
                 <li><a href="element_tree_lite/">TEI Lite</a></li>
@@ -30,6 +37,6 @@
 
     <hr />
 
-    <p>最終更新日：2019-11-29</p>
+    <p>最終更新日：2023-01-02　使用TEIガイドラインバージョン：P5 version 4.5.0</p>
 </body>
 </html>
