modify the top page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>TEI Lab</h1>
     <p>このページは、TEIガイドラインを学ぶ際にあったらいいなと思った教材を、自分で作ってみたものです。通常のTEIガイドラインだけでなく、その簡略版サブセットであるTEI Liteでも同じものを作っています。</p>
 
-    <h2>TEI の要素・属性などの一覧</h2>
+    <h2>1．TEI の要素・属性などの一覧</h2>
     <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ったものです。</p>
     <ul>
         <li>モジュール・要素・属性一覧</li>
@@ -18,7 +18,7 @@
             </ul>
     </ul>
 
-    <h2>TEI 要素の包含関係を視覚化する</h2>
+    <h2>２．TEI 要素の包含関係を視覚化する</h2>
     <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係をインタラクティブに開閉できるツリー構造として図示したものです。</p>
     <ol>
         <li>エクスプローラ型視覚化（縦展開）</li>
@@ -37,6 +37,6 @@
 
     <hr />
 
-    <p>最終更新日：2023-01-02　使用TEIガイドラインバージョン：P5 version 4.5.0</p>
+    <p>最終更新日：2023-01-02　TEIガイドラインバージョン：P5 version 4.5.0</p>
 </body>
 </html>
