modify the top page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>TEI Lab</h1>
-    <p>このページは、TEIガイドラインを学ぶために、TEIガイドラインそのものを使ってどんな教材が作れるか、試しに作ってみたものです。TEIで構造化されたテキストはプログラムでの処理が容易になることがその利点の一つですので、このページの教材もガイドラインの付録リファレンスのODDファイルから、XSLTスタイルシートによりなるべく機械的に生成するようにしています（TEIガイドラインそのものもTEIを使って書かれているため）。また通常のTEIガイドラインだけでなく、その簡略版サブセットであるTEI Liteでも同じものを作っています。</p>
+    <p>このページは、TEIガイドラインを学ぶために、TEIガイドラインそのものを使ってどんな教材が作れるか、試しに作ってみたものです。TEIで構造化されたテキストはプログラムでの処理が容易になることがその利点の一つですので、このページの教材もガイドラインの付録リファレンスのソースファイル（ODDファイル）から、XSLTスタイルシートを使ってなるべく機械的に生成するようにしています（TEIガイドラインそのものもTEIを使って書かれているため）。また通常のTEIガイドラインだけでなく、その簡略版サブセットであるTEI Liteでも同じものを作っています。</p>
 
     <h2>1．TEI の要素・属性などの一覧</h2>
     <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ったものです。</p>
