modify the top page

--- a/index.html
+++ b/index.html
@@ -2,38 +2,33 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEI Lab</title>
+    <title>TEI ガイドライン実験室</title>
 </head>
 <body>
-    <h1>TEI Lab</h1>
+    <h1>TEI ガイドライン実験室</h1>
     <p>このページは、TEIガイドラインを学ぶために、TEIガイドラインそのものを使ってどんな教材が作れるか、試しに作ってみたものです。TEIで構造化されたテキストはプログラムでの処理が容易になることがその利点の一つですので、このページの教材もガイドラインの付録リファレンスのソースファイル（ODDファイル）から、XSLTスタイルシートを使ってなるべく機械的に生成するようにしています（TEIガイドラインそのものもTEIを使って書かれているため）。また通常のTEIガイドラインだけでなく、その簡略版サブセットであるTEI Liteでも同じものを作っています。</p>
 
     <h2>1．TEI の要素・属性などの一覧</h2>
     <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ったものです。</p>
     <ul>
-        <li>モジュール・要素・属性一覧</li>
-            <ul>
-                <li><a href="element_list/">TEI</a></li>
-                <li><a href="element_list_lite/">TEI Lite</a></li>
-            </ul>
+        <li><a href="element_list/">TEI のモジュール・要素・属性一覧</a></li>
+        <li><a href="element_list_lite/">TEI Lite のモジュール・要素・属性一覧</a></li>
     </ul>
 
-    <h2>２．TEI 要素の包含関係を視覚化する</h2>
-    <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係をインタラクティブに開閉できるツリー構造として図示したものです。</p>
-    <ol>
-        <li>エクスプローラ型視覚化（縦展開）</li>
-            <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると右側のフレームにTEIガイドラインの当該要素のリファレンスページを表示します。「＞」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
-            <ul>
-                <li><a href="element_explorer/">TEI</a></li>
-                <li><a href="element_explorer_lite/">TEI Lite</a></li>
-            </ul>
-        <li>ネットワーク型視覚化（横展開）</li>
-            <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると、新しいページを開いてTEIガイドラインの当該要素のリファレンスページを表示します。「◯」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
-            <ul>
-                <li><a href="element_tree/">TEI</a></li>
-                <li><a href="element_tree_lite/">TEI Lite</a></li>
-            </ul>
-    </ol>
+    <h2>２．TEI 要素の包含関係の視覚化</h2>
+    <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係をインタラクティブに上下（開閉）できるツリー構造として図示したものです。</p>
+        <h3>1. エクスプローラ型視覚化（縦展開）</h3>
+        <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると右側のフレームにTEIガイドラインの当該要素のリファレンスページを表示します。「＞」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
+        <ul>
+            <li><a href="element_explorer/">TEI の要素の視覚化（エクスプローラ）</a></li>
+            <li><a href="element_explorer_lite/">TEI Lite の要素の視覚化（エクスプローラ）</a></li>
+        </ul>
+        <h3>ネットワーク型視覚化（横展開）</h3>
+        <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると、新しいページを開いてTEIガイドラインの当該要素のリファレンスページを表示します。「◯」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
+        <ul>
+            <li><a href="element_tree/">TEI の要素の視覚化（ネットワーク）</a></li>
+            <li><a href="element_tree_lite/">TEI Lite の要素の視覚化（ネットワーク）</a></li>
+        </ul>
 
     <hr />
 
