modify the top page

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <h3>1. エクスプローラ型視覚化（縦展開）</h3>
         <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると右側のフレームにTEIガイドラインの当該要素のリファレンスページを表示します。「＞」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
         <ul>
-            <li><a href="element_explorer/">TEI の要素の視覚化（エクスプローラ）</a></li>
-            <li><a href="element_explorer_lite/">TEI Lite の要素の視覚化（エクスプローラ）</a></li>
+            <li><a href="element_explorer/">TEI の要素の視覚化（エクスプローラ型）</a></li>
+            <li><a href="element_explorer_lite/">TEI Lite の要素の視覚化（エクスプローラ型）</a></li>
         </ul>
         <h3>ネットワーク型視覚化（横展開）</h3>
         <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると、新しいページを開いてTEIガイドラインの当該要素のリファレンスページを表示します。「◯」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
         <ul>
-            <li><a href="element_tree/">TEI の要素の視覚化（ネットワーク）</a></li>
-            <li><a href="element_tree_lite/">TEI Lite の要素の視覚化（ネットワーク）</a></li>
+            <li><a href="element_tree/">TEI の要素の視覚化（ネットワーク型）</a></li>
+            <li><a href="element_tree_lite/">TEI Lite の要素の視覚化（ネットワーク型）</a></li>
         </ul>
 
     <hr />
