modify the top page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ったものです。</p>
     <ul>
         <li><a href="element_list/">TEI のモジュール・要素・属性一覧</a></li>
-        <li><a href="element_list_lite/">TEI Lite のモジュール・要素・属性一覧</a></li>
+        <li><a href="element_list_lite/">TEI Lite 要素一覧（付・TEIガイドライン定義モジュール・属性一覧）</a></li>
     </ul>
 
     <h2>２．TEI 要素の包含関係の視覚化</h2>
