modify the top page

--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
 </head>
 <body>
     <h1>TEI ガイドライン実験室</h1>
-    <p>このページは、TEIガイドラインを学ぶために、TEIガイドラインそのものを使ってどんな教材が作れるか、試しに作ってみたものです。TEIで構造化されたテキストはプログラムでの処理が容易になることがその利点の一つですので、このページの教材もガイドラインの付録リファレンスのソースファイル（ODDファイル）から、XSLTスタイルシートを使ってなるべく機械的に生成するようにしています（TEIガイドラインそのものもTEIを使って書かれているため）。また通常のTEIガイドラインだけでなく、その簡略版サブセットであるTEI Liteでも同じものを作っています。</p>
+    <p>このページは、TEIガイドラインを学ぶために、TEIガイドラインを使った教材を試みに作ったものです。TEIで構造化されたテキストはプログラムでの処理が容易になることがその利点の一つですので、このページの教材もガイドラインの付録リファレンスのソースファイル（TEIを使って書かれている）から、XSLTスタイルシートを使って機械的な生成を試みています。また通常のTEIガイドラインだけでなく、その簡略版（サブセット）であるTEI Liteでも同じものを作っています。</p>
 
     <h2>1．TEI の要素・属性などの一覧</h2>
-    <p>TEIガイドラインにどんな要素や属性があるか、とりあえずざっとでいいので通覧したい、そんな時に使うことのできるページが TEIガイドラインにはないので、作ったものです。</p>
+    <p>TEIガイドラインにどんな要素や属性があるか、ざっとでよいので通覧できるページが TEIガイドラインにはないので、作ってみたものです。</p>
     <ul>
         <li><a href="element_list/">TEI のモジュール・要素・属性一覧</a></li>
         <li><a href="element_list_lite/">TEI Lite 要素一覧（付・TEIガイドライン定義モジュール・属性一覧）</a></li>
     </ul>
 
     <h2>２．TEI 要素の包含関係の視覚化</h2>
-    <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係をインタラクティブに上下（開閉）できるツリー構造として図示したものです。</p>
+    <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係（構造）をインタラクティブに閲覧してみることができるように作ったものです。</p>
         <h3>1. エクスプローラ型視覚化（縦展開）</h3>
-        <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると右側のフレームにTEIガイドラインの当該要素のリファレンスページを表示します。「＞」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
+        <p>「＞」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。要素名の上にカーソルを当てて持っていって少し待つと、その要素の概略をツールチップで表示します。要素名をクリックすると右側のフレームにTEIガイドラインのリファレンスページを表示します。</p>
         <ul>
             <li><a href="element_explorer/">TEI の要素の包含関係の視覚化（エクスプローラ型）</a></li>
             <li><a href="element_explorer_lite/">TEI Lite の要素の包含関係の視覚化（エクスプローラ型）</a></li>
         </ul>
         <h3>2. ネットワーク型視覚化（横展開）</h3>
-        <p>要素名にカーソルを持っていってしばらく待つと、その要素の概略説明をツールチップで表示します。要素名をクリックすると、新しいページを開いてTEIガイドラインの当該要素のリファレンスページを表示します。「◯」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。</p>
+        <p>「◯」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。要素名の上にカーソルを持っていって少し待つと、その要素の概略をツールチップで表示します。要素名をクリックすると、TEIガイドラインのリファレンスページを新しく開きます。</p>
         <ul>
             <li><a href="element_tree/">TEI の要素の包含関係の視覚化（ネットワーク型）</a></li>
             <li><a href="element_tree_lite/">TEI Lite の要素の包含関係の視覚化（ネットワーク型）</a></li>
@@ -32,6 +32,6 @@
 
     <hr />
 
-    <p>最終更新日：2023-01-02　TEIガイドラインバージョン：P5 version 4.5.0</p>
+    <p>最終更新日：2023-01-03　TEIガイドラインバージョン：P5 version 4.5.0　制作者：<a href="https://docs.google.com/forms/d/e/1FAIpQLSfX57seqrRSkkDmeFsIHQbFH9cT6DolcQ1B-JCDmDPj-evrTg/viewform?usp=sf_link">村並秀昭</a></p>
 </body>
 </html>
