modify the top page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>TEI ガイドライン実験室</h1>
-    <p>このページは、TEIガイドラインを学ぶために、TEIガイドラインを使った教材を試みに作ったものです。TEIで構造化されたテキストはプログラムでの処理が容易になることがその利点の一つですので、このページの教材もガイドラインの付録リファレンスのソースファイル（TEIを使って書かれている）から、XSLTスタイルシートを使って機械的な生成を試みています。また通常のTEIガイドラインだけでなく、その簡略版（サブセット）であるTEI Liteでも同じものを作っています。</p>
+    <p>このページは、TEIガイドラインの学習教材として、こんなものもあったらいいなと思ったものを、自分で作ってみたものです。通常のTEIガイドラインだけでなく、その簡略版（サブセット）であるTEI Liteでも同じものを作っています。</p>
 
     <h2>1．TEI の要素・属性などの一覧</h2>
     <p>TEIガイドラインにどんな要素や属性があるか、ざっとでよいので通覧できるページが TEIガイドラインにはないので、作ってみたものです。</p>
@@ -16,7 +16,7 @@
     </ul>
 
     <h2>２．TEI 要素の包含関係の視覚化</h2>
-    <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係（構造）をインタラクティブに閲覧してみることができるように作ったものです。</p>
+    <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係（構造）をインタラクティブに閲覧してみたくて、作ったものです。</p>
         <h3>1. エクスプローラ型視覚化（縦展開）</h3>
         <p>「＞」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。要素名の上にカーソルを当てて持っていって少し待つと、その要素の概略をツールチップで表示します。要素名をクリックすると右側のフレームにTEIガイドラインのリファレンスページを表示します。</p>
         <ul>
