modify the top page

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     </ul>
 
     <h2>２．TEI 要素の包含関係の視覚化</h2>
-    <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係（構造）をインタラクティブに閲覧してみたくて、作ったものです。</p>
-        <h3>1. エクスプローラ型視覚化（縦展開）</h3>
-        <p>「＞」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。要素名の上にカーソルを当てて持っていって少し待つと、その要素の概略をツールチップで表示します。要素名をクリックすると右側のフレームにTEIガイドラインのリファレンスページを表示します。</p>
+    <p>TEIはXMLなので要素同士には包含関係があり、ツリー構造をとります。この関係（構造）をインタラクティブに閲覧してみたいと思い、作ったものです。</p>
+        <h3>2-1. エクスプローラ型視覚化（縦展開）</h3>
+        <p>「＞」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。要素名の上にカーソルを持っていって少し待つと、その要素の概略をツールチップで表示します。要素名をクリックすると、右側のフレームにTEIガイドラインのリファレンスページを表示します。</p>
         <ul>
             <li><a href="element_explorer/">TEI の要素の包含関係の視覚化（エクスプローラ型）</a></li>
             <li><a href="element_explorer_lite/">TEI Lite の要素の包含関係の視覚化（エクスプローラ型）</a></li>
         </ul>
-        <h3>2. ネットワーク型視覚化（横展開）</h3>
+        <h3>2-2. ネットワーク型視覚化（横展開）</h3>
         <p>「◯」マークをクリックするたびに、その要素の下位要素を表示したり、隠したりします。要素名の上にカーソルを持っていって少し待つと、その要素の概略をツールチップで表示します。要素名をクリックすると、TEIガイドラインのリファレンスページを新しく開きます。</p>
         <ul>
             <li><a href="element_tree/">TEI の要素の包含関係の視覚化（ネットワーク型）</a></li>
